Archive2/79/ede74c7ef22095/output
main.cpp: In function 'int main()':
main.cpp:33:5: error: redefinition of 'int main()'
 int main()
     ^
main.cpp:15:5: note: 'int main()' previously defined here
 int main()
     ^
main.cpp: At global scope:
main.cpp:43:2: warning: extra ';' [-Wpedantic]
 };
  ^
main.cpp: In function 'int main()':
main.cpp:50:6: error: redefinition of 'int main()'
  int main()
      ^
main.cpp:15:5: note: 'int main()' previously defined here
 int main()
     ^
